CHANGES.txt - 01/31/2003
------------------------

CHANGES IN CUPS V1.1.19

	- The scheduler did not properly parse the SystemGroup
	  directive, so only the first group would be used.
	- Revamped how strings are stored in the scheduler,
	  providing a substantial improvement in memory usage
	  for systems with large numbers of printers.
	- The PostScript filter now supports binary PostScript
	  files and files beginning with the PJL language escape
	  sequence.
	- The PPD API now provides additional information from
	  the PPD file.
	- The USB backend didn't compile on Solaris Intel.
	- The cupstestppd utility now supports the "-q" option
	  (quiet) for use in scripts, etc.
	- Merged several weight-reducing changes into the CUPS
	  baseline donated by Apple.
	- Added preliminary support for CDSA; patch provided by
	  Apple.
	- Implicit classes are now created from identical
	  printer classes on the network.
	- The lp command now supports a "-H restart" option to
	  restart previously printed jobs.  This functionality
	  only works if you have enabled the PreserveJobFiles
	  option.
	- The scheduler now supports URIs in HTTP request lines
	  to conform to the HTTP/1.1 specification.
	- The time-at-xyz attributes were not recognized in
	  banner files if prefixed by a question mark, e.g.
	  "{?time-at-creation}".
	- Added support for pre-filtering application/pictwps
	  files on MacOS clients before sending them to a server
	  via IPP.
	- The scheduler now allows file:/dev/null device URIs
	  even if FileDevices is set to No.
	- CUPS uses strerror() for hostname resolution errors,
	  when it should have used hstrerror().
	- The USB backend no longer tries to guess the serial
	  number of a device from the USB devices file; this
	  means that printers that don't report their serial
	  numbers in the device ID string will not be
	  individually selectable.
	- The pstops filter didn't handle page ranges properly
	  when a page contained an embedded document.